fix(select): correct styles in item on ios

--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -119,7 +119,6 @@
 
 :host(.item-has-modern-select) {
   --padding-start: 0px;
-  --padding-top: 0px;
   --inner-padding-end: 0px;
 
   overflow: initial;
